--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "swiper": "^6.8.4"
   },
   "scripts": {
     "cy": "cypress run",
